[gd_scene load_steps=9 format=2]

[ext_resource path="res://Global.gd" type="Script" id=1]
[ext_resource path="res://Assets/sounds/explode.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/sounds/vanish.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sounds/game_over.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sounds/blop.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/ding_bounce.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/sounds/hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/sounds/switch_ship.wav" type="AudioStream" id=8]

[node name="Global" type="Node2D"]
script = ExtResource( 1 )

[node name="snd_Boum" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="snd_Vanish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="snd_GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="snd_Blop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="snd_Ding_Bounce" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="snd_Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="snd_Switch_Ship" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
